--- a/overrides/404.html
+++ b/overrides/404.html
@@ -89,7 +89,7 @@ div.text a:hover {
         <div class="text">
         <h1>Sorry!</h1>
         <h2>Seems like the flux capacitor is broken, it only responds with "404" and messed up everything?!? <br> Let's start all over from</h3>
-        <a href="https://1coderookie.github.io/KobraGoNeoInsights" class="yes">HOME</a>
+        <a href="https://1coderookie.github.io/Kobra2ProInsights" class="yes">HOME</a>
         </div>
     </section>
 
