--- a/overrides/404.html
+++ b/overrides/404.html
@@ -2,28 +2,22 @@
   
 <!-- Content --> 
 
-{% block content %} 
+{% block container %} 
 
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 
 <style>
-    @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
-
-* {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    font-family: 'Press Start 2P';
-    color: #FFFFFF;
-    text-align: center;
-}
 
 body {
-    background-color: #000000;
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='42' height='58' viewBox='0 0 42 58'%3E%3Cg fill='%23dddcdd' fill-opacity='0.23'%3E%3Cpath fill-rule='evenodd' d='M12 18h12v18h6v4H18V22h-6v-4zm-6-2v-4H0V0h36v6h6v36h-6v4h6v12H6v-6H0V16h6zM34 2H2v8h24v24h8V2zM6 8a2 2 0 1 0 0-4 2 2 0 0 0 0 4zm8 0a2 2 0 1 0 0-4 2 2 0 0 0 0 4zm8 0a2 2 0 1 0 0-4 2 2 0 0 0 0 4zm8 0a2 2 0 1 0 0-4 2 2 0 0 0 0 4zm0 8a2 2 0 1 0 0-4 2 2 0 0 0 0 4zm0 8a2 2 0 1 0 0-4 2 2 0 0 0 0 4zm0 8a2 2 0 1 0 0-4 2 2 0 0 0 0 4zM2 50h32v-8H10V18H2v32zm28-6a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-8 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-8 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-8 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm0-8a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm0-8a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm0-8a2 2 0 1 0 0 4 2 2 0 0 0 0-4z'/%3E%3C/g%3E%3C/svg%3E");
+    background-image: url("diggin.JPG");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: contain;
+    background-color: black;
+    background-position: center; 
 }
 
+  
 section.notFound {
     display: flex;
     justify-content: center;
@@ -34,29 +28,25 @@ section.notFound {
 
 section.notFound h1 {
     color: red;
-    font-size: 25px;
+    font-size: 30px;
+    margin-bottom: 45px;
 }
 
-section.notFound h2 {
-    font-size: 15px;
-}
 
-section.notFound h1, h2, h3 {
-    margin-bottom: 15px;
-}
-
+  
 div.text {
     height: 15vh;
 }
 
 div.text a {
-    text-decoration: none;
+    color: red;
+    text-decoration: underline;
     margin-right: 15px;
 }
 
 div.text a:hover {
-    color: red;
-    text-decoration: underline; 
+    color: yellow;
+    text-decoration: none; 
 }
 
 @media only screen and (max-width: 600px) {
@@ -69,27 +59,23 @@ div.text a:hover {
         height: auto;
     }
     section.notFound h1 {
-        font-size: 25px;
-    }
-    section.notFound h2 {
-        font-size: 15px;
+        color: red;
+        font-size: 20px;
+    }  
+    div.text a {
+    color: red;
+    text-decoration: underline;
+    margin-right: 15px;
     }
     div.text a:active {
-    color: red;
-    text-decoration: underline; 
+    color: yellow;
+    text-decoration: none; 
   }
 }
 </style>
-
     <section class="notFound">
-        <div class="img">
-        <img src="https://assets.codepen.io/5647096/backToTheHomepage.png" style="width:80%;" alt="Back to the Homepage"/>
-        <img src="https://assets.codepen.io/5647096/Delorean.png" style="width:80%;" alt="El Delorean, El Doc y Marti McFly"/>
-        </div>
         <div class="text">
-        <h1>Sorry!</h1>
-        <h2>Seems like the flux capacitor is broken, it only responds with "404" and messed up everything?!? <br> Let's start all over from</h3>
-        <a href="https://1coderookie.github.io/Kobra2ProInsights" class="yes">HOME</a>
+        <h1>Sorry! <br> I've been digging deep, but I can't find what you're looking for.. <br> Please start all over from <a href="https://1coderookie.github.io/KobraGoNeoInsights" class="yes">HOME</a></h1>
         </div>
     </section>
 
