--- a/overrides/404.html
+++ b/overrides/404.html
@@ -75,7 +75,7 @@ div.text a:hover {
 </style>
     <section class="notFound">
         <div class="text">
-        <h1>Sorry! <br> I've been digging deep, but I can't find what you're looking for.. <br> Please start all over from <a href="https://1coderookie.github.io/KobraGoNeoInsights" class="yes">HOME</a></h1>
+        <h1>Sorry! <br> I've been digging deep, but I can't find what you're looking for.. <br> Please start all over from <a href="https://1coderookie.github.io/Kobra2ProInsights" class="yes">HOME</a></h1>
         </div>
     </section>
 
